--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 :root[data-theme="dark"]{
     --bodyBg:linear-gradient(to right, #232526, #414345);
-    --cardBg:rgba(0, 0, 0, .9);
+    --cardBg:rgba(0, 0, 0, .1);
     --footerItemBg: rgba(255, 255, 255, .2);
     --modeBg: rgba(255, 255, 255, .3);
     --footerHover: rgba(255, 255, 255, .4);
@@ -57,8 +57,18 @@
         opacity: 0;
         visibility: hidden;
     }
-    .forecastWeekly{
-        min-height: 200px;
+    .forecastDaily{
+        min-height: 420px;
+        padding-bottom: 15px;
+        text-align: center;
+    }
+    .forecastDailyCard > p:first-child{
+        font-weight: normal!important;
+        font-size: 14px!important;
+    }
+    
+    .forecastDailyCard > span{
+        display: block!important;
     }
     
   }
@@ -112,6 +122,9 @@ body{
     transition: all 1s;
     margin: 10px 0;
     border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .daily{
@@ -276,6 +289,48 @@ body{
 }
 
 .card > span > p:last-child{
+    margin-left: 5px;
+    color: var(--fontColorDegree);
+}
+
+.forecastDaily{
+    display: flex;
+    width: 95%;
+    margin: 20px auto 0 auto;  
+    color: var(--fontColor);
+}
+
+.forecastDaily > .forecastDailyCard:first-child{
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.forecastDaily > .forecastDailyCard:last-child{
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-right: none;
+}
+
+.forecastDailyCard{
+    background-color: var(--cardBg);
+    max-height: 300px;
+    min-width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-right: 1px solid var(--border);
+}
+
+.forecastDailyCard > p:first-child{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.forecastDailyCard > span{
+    display: flex;
+}
+
+.forecastDailyCard > span > p:last-child {
     margin-left: 5px;
     color: var(--fontColorDegree);
 }
